changed the title

--- a/registration.html
+++ b/registration.html
@@ -110,6 +110,13 @@
                 <label for="phone">Phone Number</label>
                 <input type="tel" id="phone" name="phone" required>
             </div>
+
+           <!-- Alternate Phone Number Field -->
+            <div class="inputbox">
+                <label for="Alternate phone">Alternate Phone Number</label>
+                <input type="tel" id="phone" name="phone" required>
+            </div>
+
             
             <!-- Submit Button -->
             <button type="submit" class="submit-btn">Register</button>
